<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--底部信息数据###########################################-->
    <TextView
        android:id="@+id/tv_bottom_humidity"
        tools:ignore="MissingConstraints"
        tools:text="80%"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_grey_100"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_bottom_appear_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        tools:text="43°"
        android:textSize="24sp"
        android:textColor="@color/blue_grey_100"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/tv_bottom_aqi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        tools:text="33"
        android:textSize="24sp"
        android:textColor="@color/blue_grey_100"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/tv_bottom_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        tools:text="955hPa"
        android:textSize="24sp"
        android:textColor="@color/blue_grey_100"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <!--底部信息说明###############################################-->
    <TextView
        android:id="@+id/tv_bottom_humidity_idict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/humidity"
        android:textSize="24sp"
        android:textColor="@color/blue_grey_800_mix"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/tv_bottom_appear_temp_idict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/temp_appear"
        android:textSize="24sp"
        android:textColor="@color/blue_grey_800_mix"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/tv_bottom_aqi_idict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/aqi_quality_index"
        android:textSize="24sp"
        android:textColor="@color/blue_grey_800_mix"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/tv_bottom_pressure_idict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/pressure"
        android:textSize="24sp"
        android:textColor="@color/blue_grey_800_mix"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <!--Flow布局##############################-->
    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_bottom_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="
        tv_bottom_humidity,
        tv_bottom_appear_temp,
        tv_bottom_aqi,
        tv_bottom_pressure,
        tv_bottom_humidity_idict,
        tv_bottom_appear_temp_idict,
        tv_bottom_aqi_idict,
        tv_bottom_pressure_idict"
        app:layout_constraintTop_toTopOf="parent"

        app:flow_verticalAlign="center"
        app:flow_wrapMode="aligned"
        app:flow_maxElementsWrap="4"
        />

</androidx.constraintlayout.widget.ConstraintLayout>